till custom events

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,18 @@
 <div class="container">
   <div class="topBar">{{title}}</div>
+  <div *ngIf="!username" class="usernamebox">
+    <div class="user">
+      <p style="padding-bottom: 10px; font-weight: bold;">Who are you?</p>
+      <form (submit)="addUser(user)">
+        <input type="text" name="user" [(ngModel)]="user">
+        <button type="submit">Join Chat</button>
+      </form>
+    </div>
+  </div>
   <div class="chatarea">
     <div style="min-height: 0; overflow: scroll;" id="scrolldiv">
-      <div *ngFor="let chat of chats; let i = index" class="chat" [class.me]="i % 3">
-        <p>{{chat}}</p>
+      <div *ngFor="let chat of chats; let i = index" class="chat" [class.notify]="chat.type == 'notify'" [class.me]="chat.user == username">
+        <p><span class="username">{{chat.user}}</span>{{chat.message}}</p>
       </div>
     </div>
   </div>
