--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,5 @@
+
+    
 .container {
   height: 100%;
   display: flex;
@@ -25,6 +27,9 @@
 .chatarea .chat.me {
   justify-content: flex-end;
 }
+.chatarea .chat.notify {
+  justify-content: center;
+}
 .chatarea .chat.me p {
   background-color: #fff;
 }
@@ -35,7 +40,19 @@
   border-radius: 5px;
   box-shadow: 1px 1px 4px rgba(0,0,0,0.3);
 }
-
+.chatarea .chat.notify p {
+  background-color: transparent;
+  box-shadow: none;
+  font-size: 0.8em;
+  font-weight: bold;
+  color: grey;
+}
+.chatarea .chat p .username {
+  display: block;
+  font-size: 0.8em;
+  font-weight: bold;
+  font-style: italic;
+}
 .inputarea form {
   padding: 10px 0 10px 20px;
   display: flex;
@@ -45,18 +62,18 @@
 .inputarea .textbox {
   flex-grow: 1;
 }
-.inputarea .textbox {
+.inputarea .textbox, .usernamebox .user input {
   width: 100%;
   display: block;
   border: 0;
   font-size: 1.2em;
   border-bottom: 2px solid #e0e0e0;
 }
-.inputarea .textbox:focus {
+.inputarea .textbox:focus, .usernamebox .user input:focus {
   outline: 0;
   border-color: #2196F3;
 }
-.inputarea .sendbutton {
+.inputarea .sendbutton, .usernamebox .user button {
   padding: 7px 10px;
   font-size: 1em;
   border: 0;
@@ -66,4 +83,21 @@
 }
 .inputarea .sendbutton:focus {
   outline: 0; 
+}
+.usernamebox {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e0e0e0;
+}
+.usernamebox .user {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  padding: 20px;
+  align-items: center;
+}
+.usernamebox .user form {
+  text-align: center;
 }
